Closed Bug 183211 Opened 23 years ago Closed 23 years ago

font-size: 0.8em; becomes invisible

Categories

(Core :: CSS Parsing and Computation, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla1.3alpha

People

(Reporter: JRHunter, Assigned: dbaron)

References

()

Details

(Keywords: testcase, Whiteboard: [patch])

Attachments

(3 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021202 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021202 Mozilla 1.2.1 is correct. If the font-size in the CSS is smaller than 1.0em the latest trunk does not render this text. Reproducible: Always Steps to Reproduce: 1. go to http://www.mozillazine.org/ 2. try to read text with class="stryTxt" 3. Actual Results: text with class="stryTxt" is invisible Expected Results: text should render correctly (like mozilla 1.2.1) if I alter the font-size in http://www.mozillazine.org/frontpage.css to "font-size: 1.0em;" then the text is visible
Attached file my testcase
simple testcase to show the error
Are you using Xft or non-Xft? I don't see the problem on my Xft Linux build from yesterday. (Are you using the morning build or the evening build?)
I use Mozilla 2002120221 without XFT (normal Mozilla Trunk) under Redhat 8.0. ftp://ftp.mozilla.org/pub/mozilla/nightly/latest/mozilla-i686-pc-linux-gnu-sea.tar.gz
I reproduced the bug with a new profile in Mozilla 2002120304 and without any plugins.
Worksforme in a fresh profile in 2002120304 (tarball) on RH8.
worksforme, linux trunk build 2002-12-01-21 (non-xft).... Has this regressed since then?
I tried some trunks and here are the results: Build 2002112905 works Build 2002120121 works Build 2002120221 is faulty Build 2002120304 is faulty
works for me on redhat linux 8.0 (non-xft) on 2002-12-03-04trunk build marking it WFM for now
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
WORKSFORME is described as "All attempts at reproducing this bug were futile", and I don't think that's appropriate for this bug. Reopening, at least until we have a better understanding of the problem.
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
Confirming bug. Page is mostly white - little or no text, when testing with a trunk CVS build, Linux - around 8 hours old. I also notice that line-height is completely trashed from 1.4 to 1em in a little "FAQ" i have about mozilla; http://home.online.no/~rut-aane/My_Mozilla_FAQ.html But there the text is rendered.
Severity: normal → major
Could you try build 2002-12-02-04-trunk ? (Since I don't see the bug I'm going to need help from people who do in order to figure out a potential cause.)
It's a bug in the very latest nightly - just downloaded official. Pulling CVS now.
identical result with 2002120205, sea.tar.gz Linux. (is faulty)
2002-12-02-04-trunk = 2002120205 Linux Btw, meyerweb.com looks rather.. compact with this bug as well.
followed bz's suggestion and backed out checkins for bug 165877, and the bug is gone again: cvs update -j1.152 -j1.151 mozilla/string/obsolete/nsString2.cpp cvs update -j3.175 -j3.174 mozilla/string/obsolete/nsString.cpp
ccing some culprits. I bet that ToFloat() fails somewhere now, the caller does not notice, and we end up with a "0" for the font-size or something....
Status: UNCONFIRMED → NEW
Ever confirmed: true
What does "setenv | grep LC_ALL" tell you?
If I do "setenv LC_ALL fr_FR" I see the bug. strtod is presumably locale-sensitive, and we don't want ToFloat to be locale sensitive or it will do different things in locales that use ',' where Americans use '.'.
[dark@localhost src]$ locale LANG=no_NO LC_CTYPE="no_NO" LC_NUMERIC="no_NO" LC_TIME=no_NO LC_COLLATE="no_NO" LC_MONETARY="no_NO" LC_MESSAGES="no_NO" LC_PAPER="no_NO" LC_NAME="no_NO" LC_ADDRESS="no_NO" LC_TELEPHONE="no_NO" LC_MEASUREMENT="no_NO" LC_IDENTIFICATION="no_NO" LC_ALL=
Attached patch patchSplinter Review
This fixes it for me (testing with fr_FR).
OK. At about the same time as dbaron posted that comment rkaa and I finished up our little printf-session and indeed the parse stops at '.' in that locale, thus ToFloat drops everything after the '.' _and_ returns failure (it would be nice if the CSS scanner checked for that or something). Oh, and switching back to PR_strtod in ToFloat fixes the bug of course.
Comment on attachment 108135 [details] [diff] [review] patch I seem to be one step behind dbaron. ;)
Attachment #108135 - Flags: superreview+
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [patch]
Target Milestone: --- → mozilla1.3alpha
If I set export LC_ALL="en_US" and run Mozilla, there is no problem. But, if I use my native language locale setting: export LC_ALL="pl_PL" it looks the same as on the screenshot from comment #13. The same problem appears if I set LC_ALL to "de_DE" (German) or "it_IT" (Italian). Polish locale use a comma (",") as the separator, while American English uses a dot (e.g. ten and a half is 10,5 in Polish and 10.5 in American English). This is Gecko/20021203, non-xft, from sea.tar.gz, on Slackware Linux 8.1.01. (I downloaded it on Tuesday evening CET)
Fix checked in, 2002-12-03 20:43 PDT.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Ah, so that was the reason for PR_strtod. Good you added the comment.
verified
Status: RESOLVED → VERIFIED
Keywords: testcase
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: