Go back to PR_strtod since strtod does different things in different locales.  b=183211  sr=bzbarsky  r=caillon